removing fasttrack and modifications to typescript generation config (#143)